phylobook/static/css/phylobook.css
.app-container{
    min-width: 883px;
}
.titlefont {
    font-family: 'Josefin Sans', sans-serif;
}
.titleimg {
    height: 50px !important;
    width: 50px !important;
}
.headernav {
    margin-top: 10px;
    margin-bottom: 10px;
}
.dropdown-menu {
    font-size: .85rem;
}
.reg-dialog {
    width: 600px;
}
.btn:focus {
    outline: none;
    box-shadow: none;
}
.disabled {
    cursor: not-allowed;
}
a, a:hover,a:visited, a:focus {
    text-decoration:none;
}
.btn-group-xs > .btn, .btn-xs {
    padding: 1px 5px;
    font-size: 12px;
    line-height: 1.5;
    border-radius: 3px;
}
.tree {
    size: 100%;
    border: 2px solid;
    padding: 4px;
    margin: 4px;
    min-width: 980px;
}
.editedhighlight {
    border: 4px solid;
    border-color: red;
}
.seqcolor{
    font-size: 14px;
}
.images {
    size: 100%;
    overflow-x: scroll;
    border: 1px solid lightgray;
    padding: 4px;
    margin: 4px;
}
.imgparent {
    white-space: nowrap;
    height: 200px;
}
.svgimage {
    display: inline-block;
    height: 100%;
}
svg {
    font-size: 8px !important;
    height: 100% !important;
    width: 100% !important;
}
.highlighter {
    display: inline-block;
    height: 100%;
}
img {
    width: 100%;
    height: 100%;
}
.magnifybar {
    margin: 0 auto;
    width: 200px;
}
/* Context menu */
#context-menu, #context-menu-circle {
    position: fixed;
    z-index: 10000;
    width: 150px;
    background: #bfbdbd;
    border-top: 1px solid black;
    border-left: 1px solid black;
    border-right: 1px solid black;
    /* border-radius: 5px; */
    transform: scale(0);
    transform-origin: top left;
}

#context-menu.visible, #context-menu-circle.visible {
    transform: scale(1);
    transition: transform 200ms ease-in-out;
}

#context-menu .item, #context-menu-circle .item {
    padding: 8px 10px;
    font-size: 15px;
    color: #eee;
    cursor: pointer;
    border-bottom: 1px solid black;
    border-radius: inherit;
}

#context-menu .item:hover, #context-menu-circle .item:hover {
    opacity: 1.0;
    background: #c7c9c9
}

.dot {
    height: 16px;
    width: 16px;
    /* background-color: #bbb; */
    border-radius: 50%;
    display: inline-block;
    pointer-events:none;
}

.rectangle {
    height: 16px;
    width: 30px;
    margin:auto;
    display: inline-block;
    vertical-align: middle;
    pointer-events:none;
    background-color: transparent !important;
}

.Red {
    background-color: Red;
    border: 1px solid Red;
}
.Yellow {
    background-color: #efe645;
    border: 1px solid #efe645;
}
.Pink {
    background-color: #e935a1;
    border: 1px solid #e935a1;
}
.Lightblue {
    background-color: #00e3ff;
    border: 1px solid #00e3ff;
}
.Orange {
    background-color: orange;
    border: 1px solid orange;
}
.Neonblue {
    background-color: #537eff;
    border: 1px solid #537eff;
}
.Green {
    background-color: #00cb85;
    border: 1px solid #00cb85;
}
.slider-range {
    background-image: linear-gradient(to right, yellow , red);
    width: 300px;
    display: inline-block;
    margin-left: 10px;
    margin-right: 10px;
    opacity: 1.0 !important;

}
.hide {
    display: none;
}

